--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/react": "^6.1.9",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.9",
+    "@mui/x-date-pickers": "^6.15.0",
     "@supabase/auth-ui-react": "^0.4.4",
     "@supabase/auth-ui-shared": "^0.1.6",
     "@supabase/supabase-js": "^2.33.2",
     "@tanstack/react-query": "^4.35.3",
+    "@types/fullcalendar": "^3.8.0",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "json-server": "^0.17.3",
     "preact": "^10.16.0",
